@@ -19,10 +19,8 @@ package org.apache.kafka.streams.integration.utils;
 import org.apache.kafka.streams.KafkaStreams.State;
 import org.apache.kafka.streams.KafkaStreams.StateListener;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -39,7 +37,7 @@ public class CompositeStateListener implements StateListener {
     }
 
     public CompositeStateListener(final Collection<StateListener> stateListeners) {
-        this.listeners = Collections.unmodifiableList(new ArrayList<>(stateListeners));
+        this.listeners = List.copyOf(stateListeners);
     }
 
     @Override
